fixtures/runtime/valid/includes/include-return.php
<?php
echo "before|", include (__DIR__ . "/lib/return-value.php"), "|after\n";
