fixtures/runtime/invalid/includes/require-missing.php
<?php
echo "before|";
require (__DIR__ . "/missing.php");
echo "after\n";
